objects/Urban_Science_Acknowledgement__e.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Reference_ID__c</fullName>
        <label>External Reference ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Urban Science Acknowledgement</label>
    <pluralLabel>Urban Science Acknowledgement</pluralLabel>
</CustomObject>